testData/src/error/JavaInterfaceExample.java
/*
 * ©2009-2018 南京擎盾信息科技有限公司 All rights reserved.
 */

/*
 * ©2009-2018 南京擎盾信息科技有限公司 All rights reserved.
 */
package error;

import java.lang.String;

interface JavaInterfaceExample {

  void test();

  void test(String text);
}

